kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: solar-panel-api
  namespace: solar-panels
spec:
  selector:
    app: solar
  ports:
    - name: app
      protocol: TCP
      port: 8000
      targetPort: 8000
