kubernetes/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
  name: solar-panels-gateway
  namespace: solar-panels
spec:
  gatewayClassName: envoy-gateway
  listeners:
    - hostname: solar-panels.anurag.sh
      name: solar-panels-anurag-sh-https
      port: 8443
      protocol: HTTPS
      tls:
        certificateRefs:
          - kind: Secret
            name: solar-panels-anurag-sh-tls
