kubernetes/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: solar-panels-route
  namespace: solar-panels
spec:
  hostnames:
    - solar-panels.anurag.sh
  parentRefs:
    - name: solar-panels-gateway
  rules:
    - backendRefs:
        - name: solar-panel-web
          port: 3000
      matches:
        - path:
            type: PathPrefix
            value: /
    - backendRefs:
        - name: solar-panel-api
          port: 8000
      matches:
        - path:
            type: PathPrefix
            value: /api
