kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: solar-api
  namespace: solar-panels
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/limit-rps: "3"
    nginx.ingress.kubernetes.io/limit-rpm: "30"
    nginx.ingress.kubernetes.io/limit-connections: "5"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      real_ip_header CF-Connecting-IP;
spec:
  ingressClassName: nginx
  rules:
    - host: solar-panels.inf-k8s.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: solar-panel-api
                port:
                  name: app
